Empty bookmarks folder display message

* if list is empty and modifiable:
   "To bookmark pages, click the star in the address bar"

* if list is empty and unmodifiable:
   "This folder is empty"

Bug: 798653

Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I1cd88758158a7c13abe938f4698180916d0e595a
Reviewed-on: https://chromium-review.googlesource.com/878421
Reviewed-by: calamity <calamity@chromium.org>
Commit-Queue: srirama chandra sekhar <srirama.m@samsung.com>
Cr-Commit-Position: refs/heads/master@{#538696}
Former-commit-id: 70eaf83098872bfb2e9da2f1e369fb79d6a0196f